src/main/terraform/02_01_kubernetes/remote_resource/apps/harbor/ingress-harbor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-harbor
  namespace: ns-harbor
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - harbor.techlearning.me
      secretName: harbor-tls
  rules:
    - host: harbor.techlearning.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
